syntax = "proto3";

package relation.api.relation.v1;

option go_package = "/relation/api/relation/v1;v1";
import "google/api/annotations.proto";

service RelationService {
  // 关注/取消关注操作
  rpc Relation (douyin_relation_action_request) returns (douyin_relation_action_response) {
    option (google.api.http) = {
      post: "/douyin/relation/action"
      body: "*"
    };
  }

  // 获取关注列表
  rpc RelationFollowList (douyin_relation_follow_list_request) returns (douyin_relation_follow_list_response) {
    option (google.api.http) = {
      get: "/douyin/relation/follow/list"
    };
  }

  // 获取粉丝列表
  rpc RelationFollowerList (douyin_relation_follower_list_request) returns (douyin_relation_follower_list_response) {
    option (google.api.http) = {
      get: "/douyin/relation/follower/list"
    };
  }

  // 获取好友列表
  rpc FriendList (douyin_relation_friend_list_request) returns (douyin_relation_friend_list_response) {
    option (google.api.http) = {
      get: "/douyin/relation/friend/list"
    };
  }

  // 获取关注与粉丝数量
  rpc FollowCnt (FollowCnt_request) returns (FollowCnt_response) {
    option (google.api.http) = {
      get: "/douyin/relation/followcnt"
    };
  }

  // 根据 userId 和 authorId 查询用户是否关注作者
  rpc IsFollow (IsFollow_request) returns (IsFollow_response) {
    option (google.api.http) = {
      get: "/douyin/relation/isfollow"
    };
  }
}

message User {
  int64 id = 1 [json_name = "id"]; // 用户id
  string name = 2 [json_name = "name"]; // 用户名称
  int64 follow_count = 3 [json_name = "follow_count"]; // 关注总数
  int64 follower_count = 4 [json_name = "follower_count"]; // 粉丝总数
  bool is_follow = 5 [json_name = "is_follow"]; // true-已关注，false-未关注
  string avatar = 6 [json_name = "avatar"]; // 用户头像
  string background_image = 7 [json_name = "background_image"]; // 用户个人页顶部大图
  string signature = 8 [json_name = "signature"]; // 个人简介
  int64 total_favorited = 9 [json_name = "total_favorited"]; // 获赞数量
  int64 work_count = 10 [json_name = "work_count"]; // 作品数量
  int64 favorite_count = 11 [json_name = "favorite_count"]; // 点赞数量
}


message FriendUser {
  int64 id = 1 [json_name = "id"]; // 用户id
  string name = 2 [json_name = "name"]; // 用户名称
  int64 follow_count = 3 [json_name = "follow_count"]; // 关注总数
  int64 follower_count = 4 [json_name = "follower_count"]; // 粉丝总数
  bool is_follow = 5 [json_name = "is_follow"]; // true-已关注，false-未关注
  string avatar = 6 [json_name = "avatar"]; // 用户头像
  string background_image = 7 [json_name = "background_image"]; // 用户个人页顶部大图
  string signature = 8 [json_name = "signature"]; // 个人简介
  int64 total_favorited = 9 [json_name = "total_favorited"]; // 获赞数量
  int64 work_count = 10 [json_name = "work_count"]; // 作品数量
  int64 favorite_count = 11 [json_name = "favorite_count"]; // 点赞数量
  string message = 12[json_name = "message"]; // 和该好友的最新聊天消息
  int64 msgType = 13[json_name = "msgType"]; // message消息的类型，0 => 当前请求用户接收的消息， 1 => 当前请求用户发送的消息
}

message douyin_relation_action_request {
  string token = 1; // 用户鉴权token
  int64 to_user_id = 2; // 对方用户id
  int32 action_type = 3; // 1-关注，2-取消关注
}

message douyin_relation_action_response {
  int32 status_code = 1 [json_name = "status_code"]; // 状态码，0-成功，其他值-失败
  string status_msg = 2 [json_name = "status_msg"] ; // 返回状态描述
}

message douyin_relation_follow_list_request {
  int64 user_id = 1; // 用户id
  string token = 2; // 用户鉴权token
}

message douyin_relation_follow_list_response {
  int32 status_code = 1 [json_name = "status_code"]; // 状态码，0-成功，其他值-失败
  string status_msg = 2 [json_name = "status_msg"]; // 返回状态描述
  repeated User user_list = 3 [json_name = "user_list"]; // 用户信息列表
}

message douyin_relation_follower_list_request {
  int64 user_id = 1; // 用户id
  string token = 2; // 用户鉴权token
}

message douyin_relation_follower_list_response {
  int32 status_code = 1 [json_name = "status_code"]; // 状态码，0-成功，其他值-失败
  string status_msg = 2 [json_name = "status_msg"]; // 返回状态描述
  repeated User user_list = 3 [json_name = "user_list"]; // 用户列表
}

message douyin_relation_friend_list_request {
  int64 user_id = 1; // 用户id
  string token = 2; // 用户鉴权token
}

message douyin_relation_friend_list_response {
  int32 status_code = 1 [json_name = "status_code"]; // 状态码，0-成功，其他值-失败
  string status_msg = 2 [json_name = "status_msg"]; // 返回状态描述
  repeated FriendUser user_list = 3 [json_name = "user_list"]; // 用户列表
}

message FollowCnt_request {
  int64 user_id = 1; // 用户id
}

message FollowCnt_response {
  int64 follow_cnt = 3; // 关注总数
  int64 follower_cnt = 4; // 粉丝总数
}

message IsFollow_request {
  int64 user_id = 1; // 用户id
  int64 author_id = 2; // 作者id
}

message IsFollow_response {
  bool is_follow = 1; // true-已关注，false-未关注
}
